Fix: Fix for deprecated java 8 features.